--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 authors = ["josh rotenberg <joshrotenberg@gmail.com>"]
+description = "A hebcal.com REST API Client"
 edition = "2018"
 homepage = "https://github.com/joshrotenberg/hebcal-rs"
+license = "MIT/Apache-2.0"
 name = "hebcal"
 readme = "README.md"
 repository = "https://github.com/joshrotenberg/hebcal-rs.git"
-description = "A hebcal.com REST API Client"
-license = "MIT or Apache 2.0"
 version = "0.1.0"
 
 [dependencies]
