--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ name = "hebcal"
 readme = "README.md"
 repository = "https://github.com/joshrotenberg/hebcal-rs.git"
 version = "0.1.0"
+documentation = "https://docs.rs/hebcal"
 
 [dependencies]
 chrono = {version = "0.4.19", features = ["serde"]}
